@@ -1,5 +1,6 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
@@ -36,8 +37,8 @@
       />
 
   <!-- -*- extra stuff goes here -*- -->
-
-  <include file="load_content.zcml" />
-
+  <configure zcml:condition="installed collective.transmogrifier">
+    <include file="load_content.zcml" />
+  </configure>
 
 </configure>
