@@ -4,6 +4,7 @@ Changelog
 1.0 - Unreleased
 ----------------
 
+* check if c.transmogrifier is installed [giorgio]
 * switch simplemanagement to collective namespace
 * added transmogrify.dexterity
 * added plone.app.toolbar
